# rstools

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.demo/: rstools-demo.db
crates/rstools-core/: Cargo.toml
crates/rstools-core/src/: db.rs  help_popup.rs  keybinds.rs  lib.rs  telescope.rs  tool.rs  tree_sidebar.rs  ui.rs  which_key.rs
crates/rstools-core/src/vim_editor/: buffer.rs  history.rs  mod.rs
crates/rstools-database/: Cargo.toml
crates/rstools-database/src/: connection_form.rs  driver.rs  lib.rs  model.rs  table_view.rs  tunnel.rs  ui.rs
crates/rstools-http/: Cargo.toml
crates/rstools-http/src/: executor.rs  lib.rs  model.rs  request_panel.rs  sidebar.rs  ui.rs
crates/rstools-hub/: Cargo.toml
crates/rstools-hub/src/: app.rs  demo_seed.rs  main.rs
crates/rstools-keepass/: Cargo.toml
crates/rstools-keepass/src/: crypto.rs  detail.rs  lib.rs  model.rs  sidebar.rs  ui.rs  vault.rs
crates/rstools-merge/: Cargo.toml
crates/rstools-merge/src/: conflict.rs  lib.rs  ui.rs
crates/rstools-notes/: Cargo.toml
crates/rstools-notes/src/: lib.rs  model.rs  sidebar.rs  ui.rs
crates/rstools-todo/: Cargo.toml
crates/rstools-todo/src/: lib.rs  model.rs  ui.rs
docs/: usage.md
