[package]
name = "rstools-core"
description = "Shared core library for rstools: vim keybinds, which-key, telescope, database, UI primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
rusqlite.workspace = true
chrono.workspace = true
directories.workspace = true
anyhow.workspace = true
unicode-width.workspace = true

# Crypto for PIN-based password encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
