[package]
name = "rstools-hub"
description = "The main orchestrator hub for rstools - launch and switch between tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rstools"
path = "src/main.rs"

[dependencies]
rstools-core.workspace = true
rstools-todo.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
