[package]
name = "rstools-keepass"
description = "KeePass KDBX4 vault viewer for rstools with sidebar history and PIN quick-access"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rstools-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
rusqlite.workspace = true
chrono.workspace = true
anyhow.workspace = true
unicode-width.workspace = true

# KeePass KDBX4 parsing
keepass = "0.8"

# System clipboard
arboard = "3"

# Crypto for PIN-based password encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
