[package]
name = "rstools-keepass"
description = "KeePass KDBX4 vault viewer for rstools with sidebar history and PIN quick-access"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rstools-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
rusqlite.workspace = true
chrono.workspace = true
anyhow.workspace = true
unicode-width.workspace = true

# KeePass KDBX4 parsing
keepass = "=0.8.20"

# System clipboard
arboard = "3"

# Zeroize for secure password handling
zeroize = { version = "1", features = ["derive"] }
