[package]
name = "rstools-todo"
description = "Todo list tool for rstools with vim-style navigation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rstools-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
rusqlite.workspace = true
chrono.workspace = true
anyhow.workspace = true
